--- a/6-react-knowledge-cafe/src/index.css
+++ b/6-react-knowledge-cafe/src/index.css
@@ -1,6 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@plugin "daisyui";
+@import url("https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@400;500;600;700&display=swap");
+body {
+  font-family: "Exo 2", sans-serif;
+}
 /* :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
